[package]
name = "globreeks"
version = "0.1.1"
edition = "2021"
description = "globset, but order of patterns matters"
keywords = ["glob", "globset"]
repository = "https://codeberg.org/selfisekai/globreeks"
license = "Unlicense"
authors = ["lauren n. liberda <lauren@selfisekai.rocks>"]

[dependencies]
anyhow = "1.0.75"
globset = "0.4.13"
